[gd_scene load_steps=10 format=2]

[ext_resource path="res://Levels/Level1/Maze.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level1/TileMap.gd" type="Script" id=2]
[ext_resource path="res://Levels/Level1/SelectIcePoop.gd" type="Script" id=3]
[ext_resource path="res://Levels/Level1/Globals.gd" type="Script" id=4]
[ext_resource path="res://Levels/Level1/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/Level1/PlayerKini.tscn" type="PackedScene" id=6]
[ext_resource path="res://Levels/Level1/IcePoop.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sounds/eating.wav" type="AudioStream" id=8]
[ext_resource path="res://Levels/Level1/Maze.tres" type="TileSet" id=18]

[node name="Maze" type="Node2D"]
script = ExtResource( 1 )

[node name="Globals" type="Node" parent="."]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 18 )
cell_tile_origin = 1
show_collision = true
format = 1
script = ExtResource( 2 )

[node name="PlayerKini" parent="." instance=ExtResource( 6 )]
scale = Vector2( 0.3, 0.3 )

[node name="IcePoop" parent="." instance=ExtResource( 7 )]

[node name="SelectIcePoop" type="Node" parent="."]
script = ExtResource( 3 )

[node name="HUD" parent="SelectIcePoop" instance=ExtResource( 5 )]

[node name="EatSound" type="AudioStreamPlayer2D" parent="SelectIcePoop"]
stream = ExtResource( 8 )

[connection signal="signal_rotate_cell" from="TileMap" to="." method="_on_TileMap_signal_rotate_cell"]
[connection signal="ice_poop_hit" from="PlayerKini" to="SelectIcePoop" method="_on_PlayerKini_ice_poop_hit"]
[connection signal="Game_Over" from="SelectIcePoop" to="." method="_on_SelectIcePoop_Game_Over"]
[connection signal="Game_Over" from="SelectIcePoop/HUD" to="." method="_on_HUD_Game_Over"]
[connection signal="New_Game" from="SelectIcePoop/HUD" to="." method="_on_HUD_New_Game"]
[connection signal="New_Game" from="SelectIcePoop/HUD" to="SelectIcePoop" method="_on_HUD_New_Game"]
